app and domain base class renaming